# hw05

./: CMakeLists.txt  a.out  dataStructure.c  dataStructure.h  fileInfo.c  fileInfo.h  options.c  options.h  posixFuncs.c  posixFuncs.h  program.c
